<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General" >
        <Preference
            android:icon="@drawable/tomate"
            android:summary="@string/reconfiguration_message"
            android:title="@string/configuration">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="io.github.nicobdroid.lunagarden.settings.FragmentBackStackActivity"
                android:targetPackage="io.github.nicobdroid.lunagarden" />
        </Preference>

        <ListPreference
            android:icon="@drawable/courgette"
            android:key="settings_appearance_mode"
            android:title="@string/settings_appearance_title"
            android:summary="@string/settings_appearance_summary"
            android:entries="@array/appearance_mode_entries"
            android:entryValues="@array/appearance_mode_values"
            android:defaultValue="system" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">
        <SwitchPreferenceCompat
            android:icon="@drawable/chou_pomme_hiver"
            android:key="@string/settings_notification_enable"
            android:title="@string/enable_notification"
            android:defaultValue="true" />

        <io.github.nicobdroid.lunagarden.TimePreference
            android:icon="@drawable/chou_pomme_printemps"
            android:title="@string/notification_time_title"
            android:key="@string/settings_notification_time"
            android:summary="@string/notification_time_message"
            android:defaultValue="10:00"
            />

        <io.github.nicobdroid.lunagarden.NumberPickerPreference
            android:icon="@drawable/chou_pomme_automne"
            android:defaultValue="0"
            android:key="@string/settings_notification_nb_days_earlier"
            android:summary="@string/notification_days_earlier_message"
            android:title="@string/notification_days_earlier_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/legal_information_category_title">
        <Preference
            android:icon="@drawable/carotte"
            android:summary="@string/legal_terms_summary"
            android:title="@string/legal_terms_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="io.github.nicobdroid.lunagarden.LegalDocumentActivity"
                android:targetPackage="io.github.nicobdroid.lunagarden">
                <extra
                    android:name="legal_document_title"
                    android:value="@string/legal_terms_title" />
                <extra
                    android:name="legal_document_url"
                    android:value="@string/legal_terms_url" />
            </intent>
        </Preference>

        <Preference
            android:icon="@drawable/feuille_epinard"
            android:summary="@string/legal_privacy_summary"
            android:title="@string/legal_privacy_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="io.github.nicobdroid.lunagarden.LegalDocumentActivity"
                android:targetPackage="io.github.nicobdroid.lunagarden">
                <extra
                    android:name="legal_document_title"
                    android:value="@string/legal_privacy_title" />
                <extra
                    android:name="legal_document_url"
                    android:value="@string/legal_privacy_url" />
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="A propos">
        <Preference
            android:icon="@drawable/tournesol"
            android:key="@string/settings_app_version"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/about_app_version_unknown"
            android:title="@string/about_app_version_title" />

    </PreferenceCategory>
</PreferenceScreen>