<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textview"
        style="@style/TextAppearance.Sphinx.DialogWindowTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_is_leaf_veg"
        android:textColor="@color/colorTitles"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textview"
        android:layout_marginBottom="@dimen/fragment_divider_bottom_margin"
        android:layout_marginEnd="@dimen/fragment_divider_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_divider_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_divider_top_margin"
        android:background="@color/colorTitleDivider" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/layoutMessage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/message_is_leaf_veg"
            android:textColor="@color/colorSubtitles"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:layout_below="@+id/message"
            android:gravity="center"
            android:text="@string/example_leaf_veg"
            android:textColor="@color/colorSubtitles"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/example"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radiobuttonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorTextRadioButton"
                android:checked="true"
                android:text="@string/click_no"
                android:textColor="@color/colorTextRadioButton" />

            <RadioButton
                android:id="@+id/radiobuttonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorTextRadioButton"
                android:text="@string/click_yes"
                android:textColor="@color/colorTextRadioButton" />
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/buttonshape"
            android:text="@string/cancel"
            android:textColor="@color/colorTextButton" />

        <Button
            android:id="@+id/btPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/buttonshape"
            android:text="@string/button_previous"
            android:textColor="@color/colorTextButton" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:text="@string/button_next"
            android:textColor="@color/colorTextButton" />

    </LinearLayout>

</RelativeLayout>