<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/buttonshape"
        android:text="@string/button_finish"
        android:textColor="@color/colorTextButton" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btNext"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/message_settings_done"
            android:textColor="@color/colorMainTextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginTop="@dimen/fragment_divider_bottom_margin"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/message_sub_settings_done"
            android:textColor="@color/colorSecondTextView"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>