<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/state_selector"
    android:orientation="vertical"
    android:padding="2dp"
    android:textColor="@color/colorAccent"
    >


    <TextView
        android:id="@+id/date"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/moon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/date"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/a11y_moon_phase_icon"
        />

    <ImageView
        android:id="@+id/semis"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/moon"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/a11y_sowing_icon"
        />

    <ImageView
        android:id="@+id/collects"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/semis"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/a11y_harvest_icon"
        />

    <TextView
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_toEndOf="@id/collects"
        android:layout_marginStart="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/collects"
        android:layout_centerInParent="true"/>



</RelativeLayout>